--- a/src/section-5/event-booking/package.json
+++ b/src/section-5/event-booking/package.json
@@ -12,32 +12,33 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix --cache",
     "lint": "run-s lint:*",
+    "lint:oxlint": "oxlint . --fix",
+    "lint:eslint": "eslint . --fix --cache",
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
-    "vue": "^3.5.25"
+    "@tailwindcss/vite": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.26"
   },
   "devDependencies": {
-    "@prettier/plugin-oxc": "^0.0.5",
     "@tsconfig/node24": "^24.0.3",
-    "@types/node": "^24.10.1",
-    "@vitejs/plugin-vue": "^6.0.2",
+    "@types/node": "^24.10.4",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-oxlint": "~1.29.0",
-    "eslint-plugin-vue": "~10.5.1",
+    "eslint": "^9.39.2",
+    "eslint-plugin-oxlint": "~1.35.0",
+    "eslint-plugin-vue": "~10.6.2",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.29.0",
-    "prettier": "3.6.2",
-    "typescript": "~5.9.0",
-    "vite": "^7.2.4",
+    "oxlint": "~1.35.0",
+    "prettier": "3.7.4",
+    "typescript": "~5.9.3",
+    "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
-    "vue-tsc": "^3.1.5"
+    "vue-tsc": "^3.2.1"
   }
 }
