--- a/src/section-5/event-booking/package.json
+++ b/src/section-5/event-booking/package.json
@@ -15,7 +15,8 @@
     "lint": "run-s lint:*",
     "lint:oxlint": "oxlint . --fix",
     "lint:eslint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "server": "json-server --watch db.json --delay=3000 --port=3001"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -33,6 +34,7 @@
     "eslint-plugin-oxlint": "~1.35.0",
     "eslint-plugin-vue": "~10.6.2",
     "jiti": "^2.6.1",
+    "json-server": "^0.17.4",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.35.0",
     "prettier": "3.7.4",
